--- a/public/index.html
+++ b/public/index.html
@@ -21,21 +21,25 @@
 <script src="js/stray.js"></script>
 <script>
 $(function() {
+    $("#container").data("last_id", 0);
+    var promise = new $.Deferred().resolve();
     $(window).on('scroll', function() {
         var id = 0;
         if ((window.innerHeight + window.scrollY) >= document.body.offsetHeight) {
-            id = $("#container").data("last_id");
-            $.get("animals?id=" + id, function (animals) {
-                animals.forEach(function (animal) {
-                    var container = $("#container");
-                    container.append(Stray.HTMLGenerator.Thumbnail(
-                        {
-                            album_file: animal.album_file,
-                        }
-                    ));
-                    container.data("last_id", animal.id);
+            var container = $("#container");
+            if (promise.state() !== "pending") {
+                id = container.data("last_id");
+                $.get("animals?id=" + id, function (animals) {
+                    animals.forEach(function (animal) {
+                        container.data("last_id", animal.id);
+                        container.append(Stray.HTMLGenerator.Thumbnail(
+                            {
+                                album_file: animal.album_file,
+                            }
+                        ));
+                    });
                 });
-            });
+            }
         }
     }).scroll();
 });
